disabled scrollbar to avoid screen resizing problem

--- a/style.css
+++ b/style.css
@@ -5,7 +5,14 @@
 body, html{
     width: 100%;
     height: 100%;
+    margin: 0;
+    overflow: hidden;
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
+
 body{
     font-family: "My Custom Font", sans-serif, Tahoma;
     background-color: #000000;
